--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,10 +13,10 @@
   <body>
     <header>
       <div><%= link_to root_path do %><img src="/assets/logo2.png" alt="logo" id="logo"><% end %></div>
-      <div><%= link_to "Home", root_path, class: "p-2 mb-2 text-dark" %></div>
-      <div><%= link_to "About", about_path, class: "p-2 mb-2 text-dark" %></div>
-      <div><%= link_to "SNS", sns_path, class: "p-2 mb-2 text-dark" %></div>
-      <div><%= link_to "Team", team_path, class: "p-2 mb-2 text-dark" %></div>
+      <div><%= link_to "Home", root_path, class: "p-2 mb-2 text-white" %></div>
+      <div><%= link_to "About", about_path, class: "p-2 mb-2 text-white" %></div>
+      <div><%= link_to "SNS", sns_path, class: "p-2 mb-2 text-white" %></div>
+      <div><%= link_to "Team", team_path, class: "p-2 mb-2 text-white" %></div>
     </header>
     <%= yield %>
   </body>
