--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,5 +1,5 @@
 <div class="about align-middle">
   <div class="text-center">
-    <h1 class="title mb-2">About</h1>
+    <h1 class="title mb-2">ABOUT</h1>
   </div>
 </div>
