--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -4,3 +4,54 @@
     <h1 class="title mb-2">番田 長助</h1>
   </div>
 </div>
+
+    <div class="profile-wrapper">
+      <div class="container">
+        <div class="heading">
+          <h2>心は永遠の18歳。姓は番田、名は長助</h2>
+        </div>
+        <div class="profiles">
+          <div class="profile">
+            <div class="profile-icon">
+              <img src="/assets/icon1.png" class="example1">
+            </div>
+            <p class="txt-contents">YouTubeにて低めな声でゲーム配信等やってます。漢気溢れた配信でリスナーさんに活力を与えてます。実はホラゲームが超苦手。</p>
+          </div>
+          <div class="profile">
+            <div class="profile-icon">
+              <img src="/assets/icon2.png" class="example1">
+            </div>
+            <p class="txt-contents">声真似が得意です。レパートリーは数知れず！中でも大塚明夫さんの声真似は格別です。</p>
+          </div>
+          <div class="profile">
+            <div class="profile-icon">
+              <img src="/assets/icon3.png" class="example1">
+            </div>
+            <p class="txt-contents">怒るとすごく怖いです。でも最後は優しくしてくれます。さすが番長！そこにシビれる！あこがれるゥ！</p>
+          </div>
+          <div class="profile">
+            <div class="profile-icon">
+              <img src="/assets/icon4.png" class="example1">
+            </div>
+            <p class="txt-contents">帰宅すると秒で寝てしまうことがあります。仕事が忙しいから許してあげて下さい。</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="message-wrapper">
+      <div class="container">
+        <div class="heading">
+          <h3>Thank you for coming!</h3>
+        </div>
+        <div id="page_top"><a href="#"></a></div>
+      </div>
+    </div>
+
+    <footer>
+      <div class="footer-container">
+        <div class="container">
+        <p>©︎2022 ShiFa</p>
+        </div>
+      </div>  
+    </footer>
