--- a/app/views/homes/team.html.erb
+++ b/app/views/homes/team.html.erb
@@ -1,6 +1,9 @@
 <div class="team align-middle">
   <div class="text-center">
-    <h1 class="title mb-2">Team</h1>
+    <h1 class="title mb-2">TEAM</h1>
     <h2 class="subtitle mb-2">うるさくてすみま船</h2>
+    <%= link_to  "https://urusen.booth.pm/", target: :_blank, rel: "noopener noreferrer", class: "p-2 mb-2 text-dark" do %>
+    <%= icon('fas', 'gift') %> グッズ
+    <% end %> 
   </div>
 </div>
