--- a/app/views/homes/team.html.erb
+++ b/app/views/homes/team.html.erb
@@ -1,9 +1,75 @@
-<div class="team align-middle">
+<div class="teams align-middle">
   <div class="text-center">
-    <h1 class="title mb-2">TEAM</h1>
-    <h2 class="subtitle mb-2">うるさくてすみま船</h2>
-    <%= link_to  "https://urusen.booth.pm/", target: :_blank, rel: "noopener noreferrer", class: "p-2 mb-2 text-dark" do %>
-    <%= icon('fas', 'gift') %> グッズ
-    <% end %> 
   </div>
+</div>
+
+<div class="team-member">
+  <span class="heading-title">Member</span>
+  <p><span class="heading-subtext">メンバー</span></p>
+</div>
+
+<div class="team">
+  <img class="team__img" src="/assets/nakano.jpg">
+  <div class="team__name">なかのっち</div>
+  <div class="team__desc"></div>
+</div>
+
+<div class="team">
+  <img class="team__img" src="/assets/hachi.jpg">
+  <div class="team__name">ハッチャン</div>
+  <div class="team__desc"></div>
+</div>
+
+<div class="team">
+  <img class="team__img" src="/assets/ponzu.jpg">
+  <div class="team__name">ポン酢野郎</div>
+  <div class="team__desc"></div>
+</div>
+
+<div class="team">
+  <img class="team__img" src="/assets/misato.jpg">
+  <div class="team__name">みさとらん</div>
+  <div class="team__desc"></div>
+</div>
+
+<div class="team">
+  <img class="team__img" src="/assets/suzu.jpg">
+  <div class="team__name">スズ</div>
+  <div class="team__desc"></div>
+</div>
+
+<div class="team">
+  <img class="team__img" src="/assets/nero.jpg">
+  <div class="team__name">ねろちゃん</div>
+  <div class="team__desc"></div>
+</div>
+
+<div class="team">
+  <img class="team__img" src="/assets/seto.jpg">
+  <div class="team__name">瀬戸あさひ</div>
+  <div class="team__desc"></div>
+</div>
+
+<div class="team">
+  <img class="team__img" src="/assets/logo.png">
+  <div class="team__name">番長/番田長助</div>
+  <div class="team__desc"></div>
+</div>
+
+<div class="team">
+  <img class="team__img" src="/assets/konno.jpg">
+  <div class="team__name">紺野賢護</div>
+  <div class="team__desc"></div>
+</div>
+
+<div class="team">
+  <img class="team__img" src="/assets/natupyon.jpg">
+  <div class="team__name">なつぴょん</div>
+  <div class="team__desc"></div>
+</div>
+
+<div class="team">
+  <img class="team__img" src="/assets/sizin.jpg">
+  <div class="team__name">詩人さん</div>
+  <div class="team__desc"></div>
 </div>
