--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -44,14 +44,11 @@
         <div class="heading">
           <h3>Thank you for coming!</h3>
         </div>
-        <div id="page_top"><a href="#"></a></div>
       </div>
     </div>
 
     <footer>
-      <div class="footer-container">
-        <div class="container">
-        <p>©︎2022 ShiFa</p>
-        </div>
-      </div>  
+      <div class="container">
+        <p>©️ 2022 Kazuki Ogino</p>
+      </div>
     </footer>
