--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,7 +27,7 @@ body {
 }
 
 a:hover {
-  background-color: rgba(255, 255, 255, 0.3);
+  background-color: rgba(255, 255, 255, 0.2);
   text-decoration: none;
 }
 
@@ -36,7 +36,7 @@ a:hover {
 }
 
 header {
-    height: 55px;
+    height: 52px;
     width: 100%;
     display: flex;
     background-color: rgba(35, 50, 53, 0.7);
@@ -82,7 +82,7 @@ header {
   .profile-wrapper {
     height: 500px;
     padding-bottom: 80px;
-    background-color: #EEEEEE;
+    background-color: rgba(255,255,255,.8);
     text-align: center;
   }
   
@@ -126,8 +126,8 @@ header {
   }
 
   .message-wrapper {
-    border-bottom: 1px solid #eee;
     text-align: center;
+    background-color: #FF9872;
   }
 
   .message-wrapper h3 {
@@ -152,45 +152,12 @@ header {
   }
 
   footer {
-    padding: 30px 0px;
-    background-color: #ff5e00b3;
-  }
-
-  .footer-container p {
-    text-align: left;
+    height: 75px;
+    width: 100%;
+    background-color: #FF4F02;
     display: inline-block;
   }
 
-  #page_top{
-    width: 50px;
-    height: 50px;
-    position: fixed;
-    right: 0;
-    bottom: 0;
-    background: #ef3f40;
-    opacity: 0.6;
-    border-radius: 50%;
-  }
-  #page_top a{
+  footer p {
     position: relative;
-    display: block;
-    width: 50px;
-    height: 50px;
-    text-decoration: none;
-  }
-  #page_top a::before{
-    font-family: 'Font Awesome 5 Free';
-    font-weight: 900;
-    content: '\f0d8';
-    font-size: 25px;
-    color: #fff;
-    position: absolute;
-    width: 25px;
-    height: 25px;
-    top: -5px;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    margin: auto;
-    text-align: center;
   }
