--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
     <%= csp_meta_tag %>
 
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.4/css/all.css">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
@@ -13,7 +14,7 @@
 
   <body>
     <header>
-      <div><%= link_to root_path do %><img src="/assets/logo2.png" alt="logo" id="logo"><% end %></div>
+      <div><%= link_to root_path do%><img src="/assets/headerlogo2.jpg" alt="logo" id="logo"><% end %></div>
       <div><%= link_to "HOME", root_path, class: "p-2 mb-2 text-white" %></div>
       <div><%= link_to "ABOUT", about_path, class: "p-2 mb-2 text-white" %></div>
       <div><%= link_to "SNS", sns_path, class: "p-2 mb-2 text-white" %></div>
