--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,3 +1,4 @@
+<%# 全体に適応されるページ%>
 <!DOCTYPE html>
 <html>
   <head>
@@ -6,20 +7,35 @@
     <%= csp_meta_tag %>
 
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet"> <%# font-family Anton%>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.4/css/all.css">
+    <link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
+  <!--ヘッダー-->
     <header>
-      <div><%= link_to root_path do%><img src="/assets/headerlogo2.jpg" alt="logo" id="logo"><% end %></div>
-      <div><%= link_to "HOME", root_path, class: "p-2 mb-2 text-white" %></div>
-      <div><%= link_to "ABOUT", about_path, class: "p-2 mb-2 text-white" %></div>
-      <div><%= link_to "SNS", sns_path, class: "p-2 mb-2 text-white" %></div>
-      <div><%= link_to "TEAM", team_path, class: "p-2 mb-2 text-white" %></div>
+      <%= link_to root_path do%><img src="/assets/navlogo.png" alt="logo" id="logo"><% end %>
+      <%= link_to "Information", root_path %>
+      <%= link_to "Profile", about_path %>
+      <%= link_to "Live", live_path %>
+      <%= link_to "Team", team_path %>
+      <%= link_to "Goods", goods_path %>
+      
+
+      <%= link_to("https://twitter.com/OTOKOGI_BANCHO", target: :_blank, rel: "noopener noreferrer") do %>
+      <span class="fab fa-twitter fa-lg"></span>
+      <% end %>
+      <%= link_to("https://www.instagram.com/otokogi.banchou/?hl=ja", target: :_blank, rel: "noopener noreferrer") do %>
+      <span class="fab fa-instagram fa-lg"></span>
+      <% end %>
+      <%= link_to("https://www.youtube.com/channel/UCAQQrchdEWZwc0UuLdXsQvA", target: :_blank, rel: "noopener noreferrer") do %>
+      <span class="fab fa-youtube fa-lg"></span>
+      <% end %>
     </header>
     <%= yield %>
   </body>
 </html>
+
