--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,2 @@
-<div class="cover-new">
-  <div class="container">
-    <div class="row justify-content-center">
-      <h1 class="font-weight-normal mt-3">About</h1>
-    </div>
-  </div>
-</div>
+<%= link_to new_user_path do%><img src="/assets/headerlogo2.jpg" alt="logo" id="logo">
+<% end %>
