--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,16 +18,23 @@
 @import 'font-awesome-sprockets';
 @import 'font-awesome';
 
+//TOPページのCSS
+
 html,
 body {
   width: 100%;
   height: 100%;
-  margin: 0;
+  margin-top: 30px;
   padding: 0;
 }
 
+// link_toに対してホバー
+a {
+  color:white;
+}
+
 a:hover {
-  background-color: rgba(255, 255, 255, 0.2);
+  color:  orange;
   text-decoration: none;
 }
 
@@ -36,31 +43,25 @@ a:hover {
 }
 
 header {
-    height: 52px;
-    width: 100%;
-    display: flex;
-    background-color: rgba(35, 50, 53, 0.7);
-    position: fixed;
-    top: 0;
-    z-index: 10;
+  height: 70px;/*高さ指定*/
+  width:100%;/*横幅指定*/
+  /*以下はレイアウトのためのCSS*/
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: black;
+  color:#fff;
+  padding: 20px;
+  position: fixed;/*fixedを設定して固定*/
+  z-index: 999;/*最前面へ*/
+  top:0;/*位置指定*/
+  left:0;/*位置指定*/
   }
-  
-  header div:first-child {
-    margin-right: auto;
-  }
-  
-  header div:last-child {
-    margin-right: 50px;
-  }
-  
-  header div {
-    margin-left: 50px;
-    line-height: 50px;
-  }
-  
+
   #logo {
-    width: 50px;
-    height: 50px;
+    width: 100%;
+    height: 70px;
+    margin: 0 auto;
   }
 
   h1 {
@@ -73,16 +74,12 @@ header {
 
   h3 {
     font-size: 50px;
-  }
-
-  .sns-container {
-    font-size: 30px;
-  }
+  } 
 
   .profile-wrapper {
     height: 500px;
     padding-bottom: 80px;
-    background-color: rgba(255,255,255,.8);
+    background-color: rgba(255,255,255,8);
     text-align: center;
   }
   
@@ -102,21 +99,23 @@ header {
   }
   
   .profile-icon {
-    position: relative;
+    position: relative; //relative（相対位置）
   }
   
   .profile-icon p {
-    position: absolute;
+    position: absolute; //absolute（絶対位置)
     top: 90px;
     width: 100%;
     color: white;
   }
 
+  //プロフィールアイコンのサイズ変更
   .example1 {
     width: 80%;
     height: 80%;
   }
   
+  //紹介文のclass
   .txt-contents {
     width: 80%;
     display: inline-block;
@@ -159,5 +158,5 @@ header {
   }
 
   footer p {
-    position: relative;
+    padding-top: 28px;
   }
