--- a/app/views/homes/team.html.erb
+++ b/app/views/homes/team.html.erb
@@ -1,75 +1,89 @@
 <div class="teams align-middle">
   <div class="text-center">
+    <h1 class="title">URUSAKUTE SUMIMASEN</h1>
   </div>
 </div>
 
-<div class="team-member">
-  <span class="heading-title">Member</span>
-  <p><span class="heading-subtext">メンバー</span></p>
-</div>
+<div class="team-back">
+  <div class="team-member">
+    <span class="heading-title">Member</span>
+    <p><span class="heading-subtext">メンバー</span></p>
+  </div>
 
-<div class="team">
-  <img class="team__img" src="/assets/nakano.jpg">
-  <div class="team__name">なかのっち</div>
-  <div class="team__desc"></div>
-</div>
+  <div class="team">
+  <%= link_to nakano_path do%>
+    <%= image_tag "nakano.jpg", class: "team__img" %>
+    <div class="team__name">なかのっち</div>
+  <% end %>
+  </div>
 
-<div class="team">
-  <img class="team__img" src="/assets/hachi.jpg">
-  <div class="team__name">ハッチャン</div>
-  <div class="team__desc"></div>
-</div>
+  <div class="team">
+  <%= link_to hachi_path do%>
+    <%= image_tag "hachi.jpg", class: "team__img" %>
+    <div class="team__name">ハッチャン</div>
+  <% end %>
+  </div>
 
-<div class="team">
-  <img class="team__img" src="/assets/ponzu.jpg">
-  <div class="team__name">ポン酢野郎</div>
-  <div class="team__desc"></div>
-</div>
+  <div class="team">
+  <%= link_to ponzu_path do%>
+    <%= image_tag "ponzu.jpg", class: "team__img" %>
+    <div class="team__name">ポン酢野郎</div>
+  <% end %>
+  </div>
 
-<div class="team">
-  <img class="team__img" src="/assets/misato.jpg">
-  <div class="team__name">みさとらん</div>
-  <div class="team__desc"></div>
-</div>
+  <div class="team">
+  <%= link_to misato_path do%>
+    <%= image_tag "misato.jpg", class: "team__img" %>
+    <div class="team__name">みさとらん</div>
+  <% end %>
+  </div>
 
-<div class="team">
-  <img class="team__img" src="/assets/suzu.jpg">
-  <div class="team__name">スズ</div>
-  <div class="team__desc"></div>
-</div>
+  <div class="team">
+  <%= link_to suzu_path do%>
+    <%= image_tag "suzu.jpg", class: "team__img" %>
+    <div class="team__name">スズ</div>
+  <% end %>
+  </div>
 
-<div class="team">
-  <img class="team__img" src="/assets/nero.jpg">
-  <div class="team__name">ねろちゃん</div>
-  <div class="team__desc"></div>
-</div>
+  <div class="team">
+  <%= link_to nero_path do%>
+    <%= image_tag "nero.jpg", class: "team__img" %>
+    <div class="team__name">ねろちゃん</div>
+  <% end %>
+  </div>
 
-<div class="team">
-  <img class="team__img" src="/assets/seto.jpg">
-  <div class="team__name">瀬戸あさひ</div>
-  <div class="team__desc"></div>
-</div>
+  <div class="team">
+  <%= link_to seto_path do%>
+    <%= image_tag "seto.jpg", class: "team__img" %>
+    <div class="team__name">瀬戸あさひ</div>
+  <% end %>
+  </div>
 
-<div class="team">
-  <img class="team__img" src="/assets/logo.png">
-  <div class="team__name">番長/番田長助</div>
-  <div class="team__desc"></div>
-</div>
+  <div class="team">
+  <%= link_to bancho_path do%>
+    <%= image_tag "logo.png", class: "team__img" %>
+    <div class="team__name">番長/番田長助</div>
+  <% end %>
+  </div>
 
-<div class="team">
-  <img class="team__img" src="/assets/konno.jpg">
-  <div class="team__name">紺野賢護</div>
-  <div class="team__desc"></div>
-</div>
+  <div class="team">
+  <%= link_to konno_path do%>
+    <%= image_tag "konno.jpg", class: "team__img" %>
+    <div class="team__name">紺野賢護</div>
+  <% end %>
+  </div>
 
-<div class="team">
-  <img class="team__img" src="/assets/natupyon.jpg">
-  <div class="team__name">なつぴょん</div>
-  <div class="team__desc"></div>
-</div>
+  <div class="team">
+  <%= link_to natu_path do%>
+    <%= image_tag "natupyon.jpg", class: "team__img" %>
+    <div class="team__name">なつぴょん</div>
+  <% end %>
+  </div>
 
-<div class="team">
-  <img class="team__img" src="/assets/sizin.jpg">
-  <div class="team__name">詩人さん</div>
-  <div class="team__desc"></div>
+  <div class="team">
+  <%= link_to sizin_path do%>
+    <%= image_tag "sizin.jpg", class: "team__img" %>
+    <div class="team__name">詩人さん</div>
+  <% end %>
+  </div>
 </div>
