--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,3 +1,5 @@
+<%# ライティングページ%>
+
 <div class="cover align-middle">
   <div class="text-center">
     <p class="sub-title">MY NAME IS BANCHO</p>
@@ -5,6 +7,7 @@
   </div>
 </div>
 
+<%# 人物の紹介%>
     <div class="profile-wrapper">
       <div class="container">
         <div class="heading">
@@ -47,8 +50,9 @@
       </div>
     </div>
 
+<%# このページのフッター%>
     <footer>
       <div class="container">
-        <p>©️ 2022 Kazuki Ogino</p>
+        <p>©️ 2022 OkaDa</p>
       </div>
     </footer>
